# gameman

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt
gbemu/: CMakeLists.txt  main.c
headers/: cart.h  common.h  emu.h
include/: bus.h  cart.h  common.h  cpu.h  cpu_util.h  emu.h  instructions.h  interrupts.h  lcd.h  ppu.h  timer.h  ui.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  dbg.c  dma.c  emu.c  instructions.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_sm.c  ram.c  stack.c  timer.c  ui.c
tests/: CMakeLists.txt  check_gbe.c
